--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,10 @@
   <body>
     <header>
       <nav class="navbar">
-        <h1 class="logo">CoBee</h1>
+        <div class="logo-container">
+          <img src="imagem/pote-de-cafe.png" alt="" class="logo1" />
+          <h1 class="logo">CoBee</h1>
+        </div>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="sobre.html">Sobre</a></li>
@@ -30,13 +33,16 @@
       <h2>Entre em Contato</h2>
       <div class="social-icons">
         <a href="https://instagram.com" target="_blank">
-          <img src="img/instagram.svg" alt="Instagram" />
+          Instagram
+          <img src="imagem/instagram.png" alt="Instagram" class="fot" />
         </a>
         <a href="https://linkedin.com" target="_blank">
-          <img src="img/linkedin.svg" alt="LinkedIn" />
+          LinkedIn
+          <img src="imagem/business.png" alt="LinkedIn" class="fot" />
         </a>
         <a href="https://wa.me/5500000000000" target="_blank">
-          <img src="img/whatsapp.svg" alt="WhatsApp" />
+          WhatsApp
+          <img src="imagem/whatsapp.png" alt="WhatsApp" class="fot" />
         </a>
       </div>
     </section>
