--- a/index.html
+++ b/index.html
@@ -19,16 +19,21 @@
     <!-- cabeçalho -->
     <header>
       <nav class="navbar">
-        <img src="imagem/pote-de-cafe.png" alt="" class="logo1" />
-        <h1 class="logo">CoBee</h1>
+        <div class="logo-container">
+          <img src="imagem/pote-de-cafe.png" alt="" class="logo1" />
+          <h1 class="logo">CoBee</h1>
+        </div>
+
         <!-- lista de navegação -->
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="menu.html">Menu</a></li>
-          <li><a href="compre.html">Compre Agora</a></li>
-          <li><a href="contato.html">Contato</a></li>
-        </ul>
+        <div class="links">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="compre.html">Compre Agora</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
 
