--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,10 @@
   <body>
     <header>
       <nav class="navbar">
-        <h1 class="logo">CoBee</h1>
+        <div class="logo-container">
+          <img src="imagem/pote-de-cafe.png" alt="" class="logo1" />
+          <h1 class="logo">CoBee</h1>
+        </div>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="sobre.html" class="active">Sobre</a></li>
