--- a/menu.html
+++ b/menu.html
@@ -37,33 +37,33 @@
         <div id="menu-items" class="menu-items">
 
           <div class="item" data-name="Café Expresso" data-price="6">
-            <img src="" alt="">
+            <img src="imagem/coffee.png" alt="">
             <h3>Café Expresso</h3>
             <p>R$ 6,00</p>
             <button onclick="addToCart" class="button"('Café Expresso', 6)">Adicionar</button>
           </div>
 
           <div  class="menu-items" data-name="Croissant" data-price="8">
-            <img src="" alt="">
+            <img src="imagem/croissant.png" alt="">
             <h3>Croissant</h3>
             <p>R$ 8,00</p>
             <button class="button" onclick="addToCart('Croissant', 8)">Adicionar</button>
           </div>
 
           <div class="menu-items" data-name="Livro Romance" data-price="45">
-            <img src="" alt="">
+            <img src="imagem/book.png" alt="">
             <h3>Livro Romance</h3>
             <p>R$ 45,00</p>
             <button class="button" onclick="addToCart('Livro Romance', 45)">Adicionar</button>
           </div>
           <div class="menu-items" data-name="Café com Leite" data-price="10">
-            <img src="" alt="">
+            <img src="imagem/latte-art.png" alt="">
             <h3>Café com Leite</h3>
             <p>R$ 10,00</p>
             <button class="button" onclick="addToCart('Café com Leite', 10)">Adicionar</button>
           <div class="menu-items" data-name="Livro Comedia" data-price="45">
-            <img src="" alt="">
-            <h3>Livro Romance</h3>
+            <img src="imagem/book.png" alt="">
+            <h3>Livro Comedia</h3>
             <p>R$ 45,00</p>
             <button class="button" onclick="addToCart('Livro Romance', 45)">Adicionar</button>
           </div>
