mudanças de cristopher
alterei o "sobre nos" e ofundo de algumas paginas

--- a/compre.html
+++ b/compre.html
@@ -29,6 +29,7 @@
         </ul>
       </nav>
     </header>
+     <header style="background-image: url('imagem/fundo livro com café.jpg');"
 
     <section class="checkout">
       <h2>Finalizar Compra</h2>
@@ -38,6 +39,8 @@
         <input type="text" placeholder="Endereço" required />
         <button type="submit">Finalizar</button>
       </form>
+      
     </section>
+    </header>
   </body>
 </html>
