--- a/menu.html
+++ b/menu.html
@@ -29,6 +29,7 @@
         </ul>
       </nav>
     </header>
+     <header style="background-image: url('imagem/foto3.jpg');"
 
     <section class="menu-section">
       <h2>Nosso Cardápio</h2>
@@ -63,7 +64,7 @@
             <button class="button" onclick="addToCart('Café com Leite', 10)">Adicionar</button>
           <div class="menu-items" data-name="Livro Comedia" data-price="45">
             <img src="imagem/book.png" alt="">
-            <h3>Livro Comedia</h3>
+            <h3>Livro Comédia</h3>
             <p>R$ 45,00</p>
             <button class="button" onclick="addToCart('Livro Romance', 45)">Adicionar</button>
           </div>
@@ -73,5 +74,6 @@
       <ul id="cart-list"></ul>
       <div>Total: <span id="total"></span></div>
     </section>
+  </header>
   </body>
 </html>
