--- a/sobre.html
+++ b/sobre.html
@@ -28,19 +28,32 @@
         </ul>
       </nav>
     </header>
-
+    <header style="background-color: rgba(218, 164, 64, 0.877);
+   
     <section class="content">
       <h2>Sobre Nós</h2>
-      <p>
-        No CoBee, pão artesanal, café especial e literatura dividem a mesma
-        mesa.
-      </p>
-      <ul>
-        <li>Pães artesanais fresquinhos o dia todo</li>
-        <li>Café selecionado e quitutes exclusivos</li>
-        <li>Curadoria de literatura para todas as idades</li>
-        <li>Espaço para leitura e eventos literários</li>
-      </ul>
+      <h4>Bem-vindo à Cobee:
+onde o café encontra as histórias, e as histórias encontram você.</h4>
+        <p>Na Cobee, você não compra apenas um café ou um livro.
+Você leva momentos, cheiros, palavras e memórias, tudo o que cabe em uma pausa perfeita.
+Acreditamos que cada gole pode contar uma história e cada livro pode aquecer a alma como uma boa xícara. Assim, unimos duas paixões universais — o café e a leitura — em um espaço que celebra o aconchego, o pensamento e os pequenos prazeres da vida.
+</p>
+<h4>O que você encontra por aqui:</h4>
+<li>Cafés artesanais e bebidas especiais: Do espresso encorpado ao chai latte cremoso, cada bebida é preparada com carinho e ingredientes selecionados.
+</li>
+<li>Estante viva: Uma curadoria de livros que vai de clássicos a lançamentos, disponíveis para leitura no local ou empréstimo.
+</li> 
+<li> Eventos culturais: Clubes de leitura, lançamentos de livros, noites de poesia e encontros com autores.
+</li>
+<li>Ambiente acolhedor: Wi-Fi gratuito, iluminação suave, música ambiente e poltronas confortáveis para você se perder nas páginas.
+</li>
+<h4>Para quem é o Cobee?</h4>
+<li>Para leitores vorazes, escritores em busca de inspiração, estudantes em busca de paz ou qualquer pessoa que valorize uma pausa com propósito.
+</li>
+ <h4>Visite-nos
+Estamos abertos todos os dias. Venha descobrir seu novo capítulo favorito — com café, claro.
+ </h4>   
     </section>
+  </header>
   </body>
 </html>
