--- a/contato.html
+++ b/contato.html
@@ -27,7 +27,8 @@
           <li><a href="contato.html" class="active">Contato</a></li>
         </ul>
       </nav>
-    </header>
+    </header> 
+    <header style="background-image: url('imagem/fundo livro com café.jpg');"
 
     <section class="contact">
       <h2>Entre em Contato</h2>
@@ -46,5 +47,6 @@
         </a>
       </div>
     </section>
+    </header>
   </body>
 </html>
